--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
     <meta name="twitter:image" content="https://yourdomain.com/preview.png" />
 
     <!-- Theme Color (Mobile Browser Styling) -->
-    <meta name="theme-color" content="#2563eb" />
+    <!-- <meta name="theme-color" content="#2563eb" /> -->
   </head>
   <body>
     <div id="root"></div>
