--- a/client/index.html
+++ b/client/index.html
@@ -28,9 +28,12 @@
       property="og:description"
       content="Portfolio showcasing backend development skills in Node.js, Express, MongoDB, MySQL, and API development."
     />
-    <!-- <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com/" />
-    <meta property="og:image" content="https://yourdomain.com/preview.png" /> -->
+    <!-- <meta property="og:type" content="website" />-->
+    <meta property="og:url" content="https://kanhaikumarsah.com.np/" />
+    <meta
+      property="og:image"
+      content="https://kanhaikumarsah.com/favicon.png"
+    />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -39,10 +42,13 @@
       name="twitter:description"
       content="Portfolio showcasing backend development skills in Node.js, Express, MongoDB, MySQL, and API development."
     />
-    <meta name="twitter:image" content="https://yourdomain.com/preview.png" />
+    <meta
+      name="twitter:image"
+      content="https://kanhaikumarsah.com.np/favicon.png"
+    />
 
     <!-- Theme Color (Mobile Browser Styling) -->
-    <!-- <meta name="theme-color" content="#2563eb" /> -->
+    <meta name="theme-color" content="#2563eb" />
   </head>
   <body>
     <div id="root"></div>
