--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
       content="Kanhai, kanhai kumar sah, kanhai kumar, kanhaikumarsah, backend developer, Node.js, Express, MongoDB, MySQL, REST API, BCA student, Nepal developer"
     />
     <meta name="author" content="Kanhai Kumar Sah" />
+    <meta name="robots" content="index, follow" />
 
     <!-- Open Graph (Social Sharing) -->
     <meta property="og:title" content="Kanhai Kumar Sah | Backend Developer" />
@@ -28,11 +29,12 @@
       property="og:description"
       content="Portfolio showcasing backend development skills in Node.js, Express, MongoDB, MySQL, and API development."
     />
-    <!-- <meta property="og:type" content="website" />-->
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kanhaikumarsah.com.np/" />
+    <link rel="canonical" href="https://kanhaikumarsah.com.np/" />
     <meta
       property="og:image"
-      content="https://kanhaikumarsah.com/favicon.png"
+      content="https://kanhaikumarsah.com.np/favicon.png"
     />
 
     <!-- Twitter Card -->
